fix: fix code block highlighting between light/dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,13 +37,13 @@
   --color-code-number: var(--code-number);
   --color-selection: var(--selection);
   --color-selection-foreground: var(--selection-foreground);
+
   --radius: 0.625rem;
   --header-height: 4rem;
 }
 
 @layer base {
   [data-theme="shadcn-light"] {
-    --radius: 0.625rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
     --card: oklch(1 0 0);
@@ -72,7 +72,6 @@
   }
 
   [data-theme="shadcn-dark"] {
-    --radius: 0.625rem;
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
@@ -109,7 +108,6 @@
     --popover: oklch(0.99 0.01 250);
     --popover-foreground: oklch(0.18 0.01 250);
     --primary: oklch(0.47 0.13 265);
-    --primary-hover: oklch(0.52 0.13 265);
     --primary-foreground: oklch(0.99 0.01 250);
     --secondary: oklch(0.96 0.02 250);
     --secondary-hover: oklch(0.94 0.02 250);
@@ -121,11 +119,11 @@
     --accent-foreground: oklch(0.2 0.03 265);
     --destructive: oklch(0.6 0.18 30);
     --destructive-hover: oklch(0.55 0.18 30);
-    --border: oklch(0.86 0.01 250);
+    --border: oklch(0.8 0.02 250);
     --input: oklch(0.86 0.01 250);
     --ring: oklch(0.65 0.08 265);
 
-    --surface: oklch(0.95 0.019 252.98);
+    --surface: oklch(0.97 0.01 252.27);
     --surface-foreground: var(--foreground);
     --code: var(--surface);
     --code-foreground: var(--surface-foreground);
@@ -141,7 +139,6 @@
     --popover: oklch(0.24 0.02 265);
     --popover-foreground: oklch(0.96 0.01 250);
     --primary: oklch(0.72 0.14 265);
-    --primary-hover: oklch(0.68 0.14 265);
     --primary-foreground: oklch(0.13 0.02 265);
     --secondary: oklch(0.28 0.02 265);
     --secondary-hover: oklch(0.32 0.02 265);
@@ -153,9 +150,9 @@
     --accent-foreground: oklch(0.96 0.01 250);
     --destructive: oklch(0.65 0.15 25);
     --destructive-hover: oklch(0.6 0.15 25);
-    --border: oklch(0.30 0.01 265);
-    --input: oklch(0.30 0.01 265);
-    --ring: oklch(0.58 0.09 265);
+    --border: oklch(0.37 0.02 265);
+    --input: oklch(0.37 0.02 265 / 70%);
+    --ring: oklch(0.63 0.1 265);
 
     --surface: oklch(0.21 0.02 265);
     --surface-foreground: oklch(60.757% 0.03176 261.446);
@@ -235,6 +232,8 @@
 
 	body {
 		@apply bg-background text-foreground overscroll-none relative;
+    font-synthesis-weight: none;
+    text-rendering: optimizeLegibility;
 	}
 
 	.root {
@@ -337,10 +336,12 @@
 
   [data-line] span {
     color: var(--shiki-light);
+  }
 
-    @variant dark {
-      color: var(--shiki-dark) !important;
-    }
+  [data-theme="shadcn-dark"] [data-line] span,
+  [data-theme="celeste-dark"] [data-line] span,
+  [data-theme="amethyst-dark"] [data-line] span {
+    color: var(--shiki-dark) !important;
   }
 
   [data-highlighted-line],
@@ -395,6 +396,5 @@
 		@apply hidden;
 	}
 }
-
 
 
